# amp-cucumber-cpp-runner

./: .clang-tidy  .clangd  .gitignore  .ls-lint.yml  .mega-linter.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  get-winsdk.sh  release-please-config.json  sonar-project.properties
compatibility/: BaseCompatibility.cpp  BaseCompatibility.hpp  CMakeLists.txt  TestCompatibility.cpp  compatibility.cpp
compatibility/ambiguous/: ambiguous.cpp  ambiguous.feature  ambiguous.ndjson
compatibility/attachments/: attachments.cpp
compatibility/backgrounds/: backgrounds.cpp
compatibility/cdata/: cdata.cpp
compatibility/data-tables/: data-tables.cpp  out.ndjson
compatibility/doc-strings/: doc-strings.cpp
compatibility/empty/: empty.cpp  out.ndjson
compatibility/examples-tables/: examples-tables.cpp
compatibility/examples-tables-attachment/: examples-tables-attachment.cpp
compatibility/examples-tables-undefined/: examples-tables-undefined.cpp
compatibility/global-hooks/: global-hooks.cpp
compatibility/global-hooks-afterall-error/: global-hooks-afterall-error.cpp
compatibility/global-hooks-attachments/: global-hooks-attachments.cpp
compatibility/global-hooks-beforeall-error/: global-hooks-beforeall-error.cpp
compatibility/hooks/: hooks.cpp
compatibility/hooks-attachment/: hooks-attachment.cpp
compatibility/hooks-conditional/: hooks-conditional.cpp
compatibility/hooks-named/: hooks-named.cpp
compatibility/hooks-skipped/: hooks-skipped.cpp
compatibility/hooks-undefined/: hooks-undefined.cpp
compatibility/minimal/: minimal.cpp  out.ndjson
compatibility/multiple-features-reversed/: multiple-features-reversed.cpp
compatibility/parameter-types/: parameter-types.cpp
compatibility/pending/: pending.cpp
compatibility/regular-expression/: regular-expression.cpp
compatibility/repeat/: repeat.arguments.txt  repeat.cpp  repeat.feature  repeat.ndjson
compatibility/retry/: retry.cpp
compatibility/retry-ambiguous/: retry-ambiguous.cpp
compatibility/retry-pending/: retry-pending.cpp
compatibility/rules/: rules.cpp
compatibility/rules-backgrounds/: rules-backgrounds.cpp
compatibility/skipped/: skipped.cpp
compatibility/undefined/: undefined.cpp
compatibility/unknown-parameter-type/: unknown-parameter-type.cpp
compatibility/unused-steps/: unused-steps.cpp
cucumber-cpp/: Application.cpp  Application.hpp  Body.hpp  BodyMacro.hpp  CMakeLists.txt  Context.hpp  ContextManager.hpp  CucumberRunner.cpp  CucumberRunner.hpp  FeatureRunner.cpp  FeatureRunner.hpp  HookRegistry.cpp  HookRegistry.hpp  HookScopes.cpp  HookScopes.hpp  Hooks.cpp  Hooks.hpp  InternalError.hpp  JsonTagToSet.cpp  JsonTagToSet.hpp  OnTestPartResultEventListener.cpp  OnTestPartResultEventListener.hpp  ResultStates.hpp  Rtrim.cpp  Rtrim.hpp  ScenarioRunner.cpp  ScenarioRunner.hpp  StatusReporter.hpp  StepRegistry.cpp  StepRegistry.hpp  StepRunner.cpp  StepRunner.hpp  Steps.cpp  Steps.hpp  TagExpression.cpp  TagExpression.hpp  TagsToSet.hpp  TraceTime.cpp  TraceTime.hpp
cucumber-cpp-example/: CMakeLists.txt  main.cpp
cucumber-cpp-example/features/: debug.feature
cucumber-cpp-example/fixtures/: Fixture.hpp
cucumber-cpp-example/hooks/: CMakeLists.txt  TestHooks.cpp  hooks.cpp
cucumber-cpp-example/steps/: CMakeLists.txt  steps.cpp
cucumber-cpp/engine/: AmbiguousStepInfo.cpp  AmbiguousStepInfo.hpp  CMakeLists.txt  ContextManager.cpp  ContextManager.hpp  ExecutionEngine.hpp  FeatureFactory.cpp  FeatureFactory.hpp  FeatureInfo.cpp  FeatureInfo.hpp  MissingStepInfo.hpp  RuleInfo.cpp  RuleInfo.hpp  ScenarioInfo.cpp  ScenarioInfo.hpp  StepInfo.cpp  StepInfo.hpp  StepInfoBase.cpp  StepInfoBase.hpp  TestRunner.cpp  TestRunner.hpp
cucumber-cpp/report/: CMakeLists.txt  JsonReport.cpp  JsonReport.hpp  JunitReport.cpp  JunitReport.hpp  Report.cpp  Report.hpp  StdOutReport.cpp  StdOutReport.hpp
cucumber-cpp/test/: CMakeLists.txt  TestContext.cpp  TestHooks.cpp  TestSteps.cpp  TestTagExpression.cpp
cucumber_cpp/: Application.cpp  Application.hpp  Body.hpp  BodyMacro.hpp  CMakeLists.txt  CucumberCpp.hpp  HookRegistry.cpp  HookRegistry.hpp  HookScopes.cpp  HookScopes.hpp  Hooks.hpp  OnTestPartResultEventListener.cpp  Rtrim.cpp  StepRegistry.cpp  StepRegistry.hpp  Steps.hpp  TagExpression.cpp  TraceTime.cpp
cucumber_cpp/acceptance_test/: CMakeLists.txt  Main.cpp  MainCustom.cpp  MainNdjsonAssertion.cpp  compatibility.bats  coverage.bats  test.bats
cucumber_cpp/acceptance_test/features/: test_ambiguous_steps.feature  test_attachment.feature  test_doc_strings.feature  test_escape_expression.feature  test_fail_feature.feature  test_fail_scenario.feature  test_hooks.feature  test_keyword_and.feature  test_keyword_asterisk.feature  test_nested_steps.feature  test_optional_feature_hooks.feature  test_scenario_rules.feature  test_scenarios.feature  test_scenarios_unused.feature  test_step_throw.feature  test_undefined_success_1.feature  (+3 more)
cucumber_cpp/engine/: ContextManager.cpp  ContextManager.hpp  ExecutionEngine.hpp  FeatureFactory.cpp  FeatureFactory.hpp  FeatureInfo.cpp  FeatureInfo.hpp  Result.hpp  RuleInfo.cpp  RuleInfo.hpp  ScenarioInfo.cpp  ScenarioInfo.hpp  StepInfo.cpp  StepInfo.hpp  TestRunner.cpp  TestRunner.hpp
cucumber_cpp/example/: CMakeLists.txt  Main.cpp
cucumber_cpp/integration_test/: CMakeLists.txt  test.bats
cucumber_cpp/report/: CMakeLists.txt  JunitReport.cpp  JunitReport.hpp  Report.cpp  Report.hpp  StdOutReport.cpp  StdOutReport.hpp
cucumber_cpp/runner/: CMakeLists.txt  Main.cpp
cucumber_cpp/test/: CMakeLists.txt  TestContext.cpp  TestHooks.cpp  TestSteps.cpp  TestTagExpression.cpp
cucumber_cpp_example/: CMakeLists.txt  Main.cpp
cucumber_cpp_example/hooks/: Hooks.cpp  TestHooks.cpp
cucumber_cpp_example/steps/: Steps.cpp
test/: CMakeLists.txt  MainCustom.cpp  main.cpp  test.bats
test/features/: test_hooks.feature  test_rules.feature  test_scenarios.feature  test_undefined_success_1.feature  test_undefined_success_2.feature
test/hooks/: CMakeLists.txt
test/steps/: CMakeLists.txt  Steps.cpp  steps.cpp
(+50 files in other folders)
